# automove

./: .travis.yml  README.md  automove.py  base.py  conf.json  conf.yaml  config.py  local_db.py  music_db.py  notify_pb.py  pyproject.toml  requirements.txt  tv_db.py
test/: test.yaml
